# emw-sensor

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  VERA.md  button.c  devtree.c  devtree.h  emw-sensor (release).launch  emw-sensor.h  emw-sensor.launch  emw3165.ld  gen_romfs.sh  led.c  main.c  potato.c  sensor.c  setup.c  spibus.c  sta.c  startup.c  vera.c  watchdog.c
config/: eshellcfg.h  lwipopts.h  mbedtls-cfg.h  noscfg.h  owcfg.h  pos_cmsis.h  poscfg.h  potato-cfg.h  stm32f4xx_conf.h  uoscfg.h
